objects/User.object
<CustomObject>
    <fields>
        <fullName>CustomPermissions__c</fullName>
        <description>Fields contains string of custom permissions for this user.</description>
        <formula>IF ( $Permission.CanViewContractedPrices, &apos;CanViewContractedPrices&apos;, &apos;&apos;) &amp; &apos;|&apos; &amp;
IF ( $Permission.SalesAdminBypass, &apos;SalesAdminBypass&apos;, &apos;&apos;) &amp; &apos;|&apos; &amp;
IF ( $Permission.CpqManualPriceRenewalPilot, &apos;CpqManualPriceRenewalPilot&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Permissions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultSampleStore__c</fullName>
        <label>Default Sample Store</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SampleStores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupFlag__c</fullName>
        <formula>NOT (CONTAINS ( $Setup.IntegrationSettings__c.LocalProductCompanies__c , TEXT ( ImcdCompany__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrpCrmId__c</fullName>
        <description>Lotus Notes Id.</description>
        <externalId>true</externalId>
        <label>Notes Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImcdBusinessUnit__c</fullName>
        <label>IMCD Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDBusinessUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImcdCompany__c</fullName>
        <description>Imcd Company for this user</description>
        <label>IMCD Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <description>Field containing the External Id for this user. Should be Unique.</description>
        <externalId>true</externalId>
        <inlineHelpText>Should be populated with the UserID of the originating ERP system.</inlineHelpText>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JdeId__c</fullName>
        <externalId>true</externalId>
        <label>JDE ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LocalErpId__c</fullName>
        <externalId>true</externalId>
        <label>Local ERP ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PsftId__c</fullName>
        <externalId>true</externalId>
        <label>PeopleSoft ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TF_Role__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <description>The Rollout Wave that this User is part of</description>
        <formula>Case(ImcdCompany__c,
&apos;00100&apos;,&apos;Wave0&apos;
,&apos;00110&apos;,&apos;Wave0&apos;
,&apos;00112&apos;,&apos;Wave0&apos;
,&apos;21100&apos;,&apos;Wave1&apos;
,&apos;22100&apos;,&apos;Wave1&apos;
,&apos;91100&apos;,&apos;Wave1&apos;
,&apos;55500&apos;,&apos;Wave1&apos;
,&apos;56100&apos;,&apos;Wave1&apos;
,&apos;81100&apos;,&apos;Wave2&apos;
,&apos;82100&apos;,&apos;Wave2&apos;
,&apos;65100&apos;,&apos;Wave2&apos;
,&apos;41100&apos;,&apos;Wave2&apos;
,&apos;42100&apos;,&apos;Wave2&apos;
,&apos;43100&apos;,&apos;Wave2&apos;
,&apos;44100&apos;,&apos;Wave2&apos;
,&apos;45100&apos;,&apos;Wave2&apos;
,&apos;67100&apos;,&apos;Wave2&apos;
,&apos;51100&apos;,&apos;Wave2.5&apos;
,&apos;64100&apos;,&apos;Wave3&apos;
,&apos;11100&apos;,&apos;Wave2.5&apos;
,&apos;12100&apos;,&apos;Wave2.5&apos;
,&apos;13100&apos;,&apos;Wave2.5&apos;
,&apos;14100&apos;,&apos;Wave2.5&apos;
,&apos;15100&apos;,&apos;Wave2.5&apos;
,&apos;16100&apos;,&apos;Wave2.5&apos;
,&apos;16200&apos;,&apos;Wave2.5&apos;
,&apos;31100&apos;,&apos;Wave2.5&apos;
,&apos;32100&apos;,&apos;Wave2.5&apos;
,&apos;33100&apos;,&apos;Wave2.5&apos;
,&apos;35100&apos;,&apos;Wave2.5&apos;
,&apos;36100&apos;,&apos;Wave2.5&apos;
,&apos;36300&apos;,&apos;Wave2.5&apos;
,&apos;72100&apos;,&apos;Wave3&apos;
,&apos;74200&apos;,&apos;Wave3&apos;
,&apos;79100&apos;,&apos;Wave3&apos;
,&apos;78100&apos;,&apos;Wave3&apos;
,&apos;67200&apos;,&apos;Wave3&apos;
,&apos;73100&apos;,&apos;Wave3&apos;
,&apos;75100&apos;,&apos;Wave3&apos;
,&apos;75200&apos;,&apos;Wave3&apos;
,&apos;76100&apos;,&apos;Wave3&apos;
,&apos;77200&apos;,&apos;Wave3&apos;
,&apos;71100&apos;,&apos;Wave4&apos;
,&apos;55100&apos;,&apos;Wave4&apos;
,&apos;55200&apos;,&apos;Wave4&apos;
,&apos;55400&apos;,&apos;Wave4&apos;
,&apos;69100&apos;,&apos;Wave4&apos;
,&apos;69200&apos;,&apos;Wave4&apos;
,&apos;61100&apos;,&apos;Wave4&apos;
,&apos;62100&apos;,&apos;Wave4&apos;
,&apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave</label>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>IMCDCompany_is_a_required_field</fullName>
        <active>true</active>
        <description>The field IMCDCompany is required on User.
Cannot be set to required on the field itself because in that case you need to provide a default an we don&apos;t want that.</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True,
ISBLANK(TEXT( ImcdCompany__c ))
)</errorConditionFormula>
        <errorDisplayField>ImcdCompany__c</errorDisplayField>
        <errorMessage>IMCDCompany is a required field</errorMessage>
    </validationRules>
</CustomObject>